<resources>
    <string name="app_name">Go Go Live</string>
    <string name="tile_label">Live</string>
    <string name="label_rtmp_url">RTMP URL YouTube (rtmp://a.rtmp.youtube.com/live2)</string>
    <string name="label_stream_key">Stream Key YouTube</string>
    <string name="btn_start">Mulai Live</string>
    <string name="btn_stop">Stop Live</string>
    <string name="btn_save">Simpan RTMP URL &amp; Stream Key</string>
    <string name="btn_settings">Pengaturan Live</string>
    <string name="title_settings">Pengaturan Live</string>
    <string name="toast_saved">Tersimpan</string>
    <string name="label_fps">Frame Rate (FPS)</string>
    <string name="fps_30">30 FPS (Lancar)</string>
    <string name="fps_60">60 FPS (Beban Berat)</string>
    <string name="fps_warning">60fps butuh HP kuat. Jika live macet, gunakan 30fps.</string>
    <string name="label_bitrate">Bitrate (Kualitas Video)</string>
    <string name="bitrate_500kbps">0.5 Mbps (Sangat Rendah)</string>
    <string name="bitrate_800kbps">0.8 Mbps (Untuk Upload 1.2 Mbps)</string>
    <string name="bitrate_1mbps">1 Mbps (Rekomendasi Go)</string>
    <string name="bitrate_2mbps">2 Mbps (HD Ringan)</string>
    <string name="bitrate_3mbps">3 Mbps (Standar HD)</string>
    <string name="bitrate_4mbps">4 Mbps (Kualitas Tinggi)</string>
    <string name="label_resolution">Resolusi Layar (Output)</string>
    <string name="res_360p">360p (Ultra Stabil - Paling Ringan)</string>
    <string name="res_480p">480p (Stabil - Standar Go)</string>
    <string name="res_720p">720p (HD - Untuk Sinyal Kuat)</string>
    <string name="res_warning">Jika Anda mengalami error "Broken Pipe", segera gunakan resolusi 480p.</string>
    <string name="status_idle">Status: belum live</string>
    <string name="status_live">Status: LIVE 🔴</string>
    <string name="status_connecting">Status: menghubungkan…</string>
    <string name="status_failed">Status: gagal terhubung</string>
    <string name="status_reconnecting">Status: menyambung kembali…</string>
    <string name="tile_connecting">Connecting...</string>
    <string name="tile_live">LIVE 🔴</string>
    <string name="tile_reconnecting">Reconnecting...</string>
    <string name="notif_duration">Durasi: %1$s | Bitrate: %2$d kbps</string>
    <string name="notif_connecting">Menghubungkan ke YouTube…</string>
    <string name="notif_reconnecting">Menyambung kembali…</string>
    <string name="notif_failed">Koneksi Terputus!</string>
    <string name="btn_speedtest">Cek Kecepatan Upload</string>
    <string name="speedtest_running">Menguji kecepatan (tunggu 5 detik)…</string>
    <string name="speedtest_result">Kecepatan: %1$.2f Mbps. %2$s</string>
    <string name="rec_360">Rekomendasi: 360p + 800 Kbps</string>
    <string name="rec_480">Rekomendasi: 480p + 1.5 Mbps</string>
    <string name="rec_720">Rekomendasi: 720p + 3 Mbps</string>
    <string name="rec_low">Rekomendasi: 360p + 500 Kbps (Sinyal Lemah)</string>
    <string name="notif_channel_name">Live Streaming</string>
    <string name="notif_title">Go Go Live sedang live</string>
    <string name="notif_content">Merekam &amp; menyiarkan seluruh layar</string>
    <string name="toast_isi_dulu">Isi RTMP URL dan Stream Key dulu</string>
    <string name="label_audio_source">Sumber Audio</string>
    <string name="audio_source_internal">Audio Internal HP (disarankan untuk audio PC lewat spacedesk)</string>
    <string name="audio_source_mic">Microphone HP (suara sekitar/ruangan)</string>
    <string name="audio_source_mix">Campur: Audio Internal + Microphone HP</string>
</resources>
